--- a/index.html
+++ b/index.html
@@ -7,18 +7,35 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: 'Source Serif 4', serif;
+      :root {
+        --midnight: #0A1A2F;
+        --midnight-light: #112240;
+        --emerald: #00A86B;
+        --emerald-dark: #008C59;
+        --gold: #CBA135;
+        --gold-dim: #8A7436;
       }
-      /* Custom Scrollbar for Sidebar */
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: var(--midnight);
+        color: #e2e8f0;
+      }
+      h1, h2, h3, h4, h5, h6, .serif-heading {
+        font-family: 'Merriweather', serif;
+      }
+      /* Custom Scrollbar */
       .scrollbar-hide::-webkit-scrollbar {
           display: none;
       }
       .scrollbar-hide {
           -ms-overflow-style: none;
           scrollbar-width: none;
+      }
+      /* Sharp edges class utility */
+      .sharp {
+        border-radius: 0 !important;
       }
     </style>
   <script type="importmap">
@@ -33,7 +50,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#0f1115] text-slate-300 antialiased h-screen overflow-hidden selection:bg-amber-900/50 selection:text-amber-100">
+  <body class="bg-[#0A1A2F] text-slate-300 antialiased h-screen overflow-hidden selection:bg-[#CBA135]/30 selection:text-[#CBA135]">
     <div id="root"></div>
   </body>
 </html>
